# integration-o3de

./: .gitignore  AssetProcessorGemConfig.setreg  gem.json
Code/: CMakeLists.txt  ssamplitudeaudio_editor_files.cmake  ssamplitudeaudio_editor_shared_files.cmake  ssamplitudeaudio_editor_tests_files.cmake  ssamplitudeaudio_files.cmake  ssamplitudeaudio_shared_files.cmake  ssamplitudeaudio_stub_files.cmake  ssamplitudeaudio_tests_files.cmake
Code/Include/SSAmplitudeAudio/: SSAmplitudeAudioBus.h
Code/Include/SparkyStudios/Audio/Amplitude/: AmplitudeAudioBus.h
Code/Platform/Android/: ssamplitudeaudio_android_files.cmake
Code/Platform/Linux/: PAL_linux.cmake  ssamplitudeaudio_shared_linux_files.cmake
Code/Platform/Mac/: ssamplitudeaudio_mac_files.cmake
Code/Platform/Windows/: ssamplitudeaudio_shared_windows_files.cmake  ssamplitudeaudio_windows_files.cmake
Code/Platform/iOS/: ssamplitudeaudio_ios_files.cmake
Code/Source/: AmplitudeAudioEditorModule.cpp  AmplitudeAudioEditorSystemComponent.cpp  AmplitudeAudioEditorSystemComponent.h  AmplitudeAudioModule.cpp  AmplitudeAudioModuleInterface.h  AmplitudeAudioModule_Stub.cpp  AmplitudeAudioSystemComponent.cpp  AmplitudeAudioSystemComponent.h  Config.h  SSAmplitudeAudioEditorModule.cpp  SSAmplitudeAudioEditorSystemComponent.cpp  SSAmplitudeAudioEditorSystemComponent.h  SSAmplitudeAudioModule.cpp  SSAmplitudeAudioModuleInterface.h  SSAmplitudeAudioSystemComponent.cpp  SSAmplitudeAudioSystemComponent.h
Code/Source/Builder/: AmplitudeAudioControlBuilderComponent.cpp  AmplitudeAudioControlBuilderComponent.h  AmplitudeAudioControlBuilderWorker.cpp  AmplitudeAudioControlBuilderWorker.h
Code/Source/Editor/: AmplitudeAudioLoader.cpp  AmplitudeAudioLoader.h  AmplitudeAudioSystemControl.cpp  AmplitudeAudioSystemControl.h  AmplitudeAudioSystemEditor.cpp  AmplitudeAudioSystemEditor.h  AmplitudeEditor.qrc
Code/Source/Engine/: ATLEntities_amplitude.h  AmplitudeAudioSystem.cpp  AmplitudeAudioSystem.h  AmplitudeFileLoader.h  Common.h
Editor/Scripts/: bootstrap.py  clean_amplitude_project.py  common.py  compile_amplitude_project.py
Platform/Android/: android_gem.json
Platform/iOS/: ios_gem.json
